--- a/build.gradle
+++ b/build.gradle
@@ -34,16 +34,24 @@ version = "${minecraft_version}-${fluentem_version}"
 group = "io.polyfox"
 archivesBaseName = "fluentem"
 
-// 3rd party APIs
-ext.mfrApi = "sub/Growthcraft/api/powercrystals/minefactoryreloaded/api"
-ext.mfrApiExclusionPattern = "**/powercrystals/minefactoryreloaded/api/**"
-
 ext.thaumcraftApi = "sub/Growthcraft/api/thaumcraft/api"
-ext.thaumcraftApiExclusionPattern = "**/thaumcraft/api/**"
-
 ext.forestryApiRoot = "sub/Growthcraft/api/ForestryAPI"
-ext.forestryApi = "sub/Growthcraft/api/ForestryAPI/forestry/api"
-ext.forestryApiExclusionPattern = "**/forestry/api/**"
+
+class StructExtApi {
+    String name
+    String api
+    String exclusion
+    String root = api
+}
+
+StructExtApi[] apis = [
+    new StructExtApi(name: "buildcraft", api: "sub/Growthcraft/api/buildcraft/api", exclusion: "**/buildcraft/api/meh"),
+    new StructExtApi(name: "forestry", api: "sub/Growthcraft/api/ForestryAPI/forestry/api", exclusion: "**/forestry/api/**", root: ext.forestryApiRoot),
+    new StructExtApi(name: "invtweaks", api: "sub/Growthcraft/api/invtweaks/api", exclusion: "**/invtweaks/api/**"),
+    new StructExtApi(name: "mfr", api: "sub/Growthcraft/api/api/powercrystals/minefactoryreloaded/api", exclusion: "**/powercrystals/minefactoryreloaded/api/**"),
+    new StructExtApi(name: "thaumcraft", api: ext.thaumcraftApi, exclusion: "**/thaumcraft/api/**"),
+    new StructExtApi(name: "waila", api: "sub/Growthcraft/api/mcp/mobius/waila/api", exclusion: "**/mcp/mobius/waila/api/**")
+]
 
 minecraft {
     version = minecraft_forge_version
@@ -106,8 +114,6 @@ repositories {
 
 dependencies {
     compile project(":sub/Growthcraft")
-    //compile "mcp.mobius.waila:Waila:1.5.10_1.7.10:api"
-
     // Testing
     testCompile "junit:junit:4.11"
 }
@@ -125,9 +131,9 @@ sourceSets {
         java {
             srcDir 'src/main/id2h/yatm/api'
             srcDir 'api'
-            srcDir project.forestryApi
-            srcDir project.thaumcraftApi
-            srcDir project.mfrApi
+            for (StructExtApi entry in apis) {
+                srcDir entry.api
+            }
         }
     }
 }
@@ -176,9 +182,9 @@ debugClient {
 task sourceJar(type: Jar) {
     from sourceSets.main.allSource
     from(sourceSets.api.allSource) {
-        exclude project.forestryApiExclusionPattern
-        exclude project.thaumcraftApiExclusionPattern
-        exclude project.mfrApiExclusionPattern
+        for (StructExtApi entry in apis) {
+            exclude entry.exclusion
+        }
     }
     classifier = 'sources'
 }
@@ -186,10 +192,9 @@ task sourceJar(type: Jar) {
 javadoc {
     // add api classes to javadoc
     source += sourceSets.api.allSource
-    // exclude 3rd party apis from the javadoc
-    exclude project.thaumcraftApiExclusionPattern
-    exclude project.forestryApiExclusionPattern
-    exclude project.mfrApiExclusionPattern
+    for (StructExtApi entry in apis) {
+        exclude entry.exclusion
+    }
 
     failOnError = false
 }
@@ -205,11 +210,10 @@ task deobfJar(type: Jar) {
     classifier = 'dev'
 
     from sourceSets.main.output
-
     from(sourceSets.api.output) {
-        exclude project.forestryApiExclusionPattern
-        exclude project.thaumcraftApiExclusionPattern
-        exclude project.mfrApiExclusionPattern
+        for (StructExtApi api in apis) {
+            exclude api.exclusion
+        }
     }
     // Only include the thaumcraft LICENSE
     into("thaumcraft/api") {
@@ -222,23 +226,21 @@ task deobfJar(type: Jar) {
 
 task apiJar(type: Jar) {
     from(sourceSets.api.output) {
-        exclude project.forestryApiExclusionPattern
-        exclude project.thaumcraftApiExclusionPattern
-        exclude project.mfrApiExclusionPattern
+        for (StructExtApi api in apis) {
+            exclude api.exclusion
+        }
     }
     classifier = "api"
 }
 
 jar {
     classifier = 'release'
-
     // add api classes to main package
     from(sourceSets.api.output) {
-        exclude project.forestryApiExclusionPattern
-        exclude project.thaumcraftApiExclusionPattern
-        exclude project.mfrApiExclusionPattern
+        for (StructExtApi api in apis) {
+            exclude api.exclusion
+        }
     }
-
     // Only include the thaumcraft LICENSE
     into("thaumcraft/api") {
         from project.thaumcraftApi + "/LICENSE"
